tests/paczka1/fuzzy1/63671219.err
Error in line 3: A4 S535 91,2
Error in line 5: 9AwnipQ A722 2E,3
Error in line 7: A4 S535 156,0
Error in line 2: 9AwnipQ A4 88,1
Error in line 10: A4 A4 81,5
Error in line 17: A4 A4 286,9
Error in line 11: XuiAi A4 70,7
Error in line 19: A4 S535 17,3
Error in line 14: 8zKZwk4Jloh A722 36,4
Error in line 18: XuiAi S535 93,0
Error in line 20: 8zKZwk4Jloh S535 60,0
Error in line 21: XuiAi A722 68,1
Error in line 22: 9AwnipQ S838 3,9
